--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: #f0efef;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
@@ -40,11 +40,11 @@
 
 /* Navbar standard link */
 .navbar-wagon-link {
-  color: #616668;
+  color: #da552f;
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: #ffff00;
   text-decoration: none;
 }
 
@@ -54,10 +54,10 @@
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
-  color: white;
+  background-color: #CBC7C4;
+  color: #ffff00;
   font-size: 14px;
-  border: 2px solid #D23333;
+  border: 2px solid #CBC7C4;
 }
 .navbar-wagon-button:hover {
   color: white;
