--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,3 +8,15 @@
 <% end %>
 
 <%= link_to 'New', new_cocktail_path  %>
+<!-- <img src="https://images.unsplash.com/34/rcaNUh3pQ9GD8w7Iy8qE__DSC0940.jpg?dpr=1&amp;auto=format&amp;crop=entropy&amp;fit=crop&amp;w=1500&amp;h=994&amp;q=80&amp;cs=tinysrgb" style="height:600px;position:center" alt> -->
+
+
+<!-- heroku run rails db:migrate -->
+
+<div class="banner" style="background-image: url(https://images.unsplash.com/34/rcaNUh3pQ9GD8w7Iy8qE__DSC0940.jpg?dpr=1&amp;auto=format&amp;crop=entropy&amp;fit=crop&amp;w=1500&amp;h=994&amp;q=80&amp;cs=tinysrgb") style="height:600px;position:center">
+  <div class="banner-content">
+    <h1>Some Stuff</h1>
+    <p>Very cool stuff, useful and smart</p>
+    <a class="btn btn-primary btn-lg">GET IT</a>
+  </div>
+</div>
