--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,6 +1,26 @@
-
+<div class="form-center"></div>
+<form class="form-inline">
+  <div class="form-group">
 <%= simple_form_for [@cocktail, @dose] do |f| %>
 <%= f.input :description %>
+</div>
+<div class="form-group">
 <%= f.input :ingredient_id, as: :select, collection: Ingredient.all %>
+</div>
 <%= f.submit %>
 <% end %>
+
+</form>
+</div>
+<!-- <form class="form-inline">
+  <div class="form-group">
+    <label for="exampleInputName2">Name</label>
+    <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail2">Email</label>
+    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+  </div>
+  <button type="submit" class="btn btn-default">Send invitation</button>
+</form>
+ -->
