Add figaro- Protect my secrete data in config/applicaiton.yml

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,16 +1,3 @@
-<h1> These are my cocktails: </h1>
-
-<p>
-<% @cocktails.each do |cocktail| %>
-<%= cocktail.name %>
-<%= link_to 'Show', cocktail %>
-</p>
-<% end %>
-
-<%= link_to 'New', new_cocktail_path  %>
-<!-- <img src="https://images.unsplash.com/34/rcaNUh3pQ9GD8w7Iy8qE__DSC0940.jpg?dpr=1&amp;auto=format&amp;crop=entropy&amp;fit=crop&amp;w=1500&amp;h=994&amp;q=80&amp;cs=tinysrgb" style="height:600px;position:center" alt> -->
-
-
 <!-- heroku run rails db:migrate -->
 
 <div class="banner" style="background-image: url(https://images.unsplash.com/34/rcaNUh3pQ9GD8w7Iy8qE__DSC0940.jpg?dpr=1&amp;auto=format&amp;crop=entropy&amp;fit=crop&amp;w=1500&amp;h=994&amp;q=80&amp;cs=tinysrgb") style="height:600px;position:center">
@@ -20,3 +7,20 @@
     <a class="btn btn-primary btn-lg">GET IT</a>
   </div>
 </div>
+
+<div class="intro">
+  <h1> These are my cocktails: </h1>
+</div>
+<p>
+  <% @cocktails.each do |cocktail| %>
+  <div class="cocktail">
+    <%= cocktail.name %>
+    <%= link_to 'Show', cocktail %>
+  </div>
+  <% end %>
+</p>
+
+<%= link_to 'New', new_cocktail_path  %>
+<!-- <img src="https://images.unsplash.com/34/rcaNUh3pQ9GD8w7Iy8qE__DSC0940.jpg?dpr=1&amp;auto=format&amp;crop=entropy&amp;fit=crop&amp;w=1500&amp;h=994&amp;q=80&amp;cs=tinysrgb" style="height:600px;position:center" alt> -->
+
+
