upload photo done

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,10 +1,8 @@
 <div class="text-center">
 <h1> Add a new cocktail to this amazing list !  </h1>
-
+<div class=" form-inline">
 <%= render 'form' %>
-
-
-
+</div>
 </div>
 
 
