--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -24,3 +24,5 @@
 <!-- <img src="https://images.unsplash.com/34/rcaNUh3pQ9GD8w7Iy8qE__DSC0940.jpg?dpr=1&amp;auto=format&amp;crop=entropy&amp;fit=crop&amp;w=1500&amp;h=994&amp;q=80&amp;cs=tinysrgb" style="height:600px;position:center" alt> -->
 
 
+<%= cl_image_tag("fuesws5tuveuwrnnpnrm.jpg",
+      width: 400, height: 300, crop: :fill) %>
